[BUGFIX] Page Module title is cut
Increase height of title to prevent content from
below to cut off part of the text.

Fixes: #43340
Releases: 6.0

--- a/typo3/sysext/t3skin/stylesheets/visual/main_content.css
+++ b/typo3/sysext/t3skin/stylesheets/visual/main_content.css
@@ -21,6 +21,7 @@ h1 {
 /* MAIN page header: */
 h2 {
 	font-size: 14px;
+	line-height: 18px;
 }
 
 /* Normal section headers */
